Implement basic Shadow DOM CSS shim

--- a/test/components/test1.html
+++ b/test/components/test1.html
@@ -1,5 +1,21 @@
 <template id="template">
 
+  <style>
+    /*! test-element-one */
+    :host {
+      background: grey;
+      border-radius: 10px;
+      padding: 20px;
+      display: block;
+    }
+
+    input.new-name {
+      padding: 4px;
+      font-size: 18px;
+    }
+
+  </style>
+
   <h1 class="name"></h1>
   <input type="text" class="new-name">
 
