Update document.currentScript polyfill

--- a/test/components/sub-import1.html
+++ b/test/components/sub-import1.html
@@ -1,5 +1,5 @@
-<link rel="import" href="./sub-import2.html">
-
+<!-- <link rel="import" href="./sub-import2.html">
+ -->
 <template id="template">
 
   <style>
@@ -21,6 +21,8 @@
 </template>
 
 <script>console.log(window)</script>
+<script src="//ajax.googleapis.com/ajax/libs/threejs/r67/three.min.js"></script>
+<script>console.log(THREE)</script>
 <script>
 
   (function (document, currentScript, ownerDocument) {
@@ -45,8 +47,6 @@
   })(document, document.currentScript, document.currentScript.ownerDocument);
 
 </script>
-<script src="//ajax.googleapis.com/ajax/libs/threejs/r67/three.min.js"></script>
-<script>console.log(THREE)</script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script>console.log(jQuery)</script>
 
