trying to get it work in IE8

--- a/test/components/sub-import1.html
+++ b/test/components/sub-import1.html
@@ -21,10 +21,9 @@
 </template>
 
 <script>console.log(window)</script>
-<script src="//ajax.googleapis.com/ajax/libs/threejs/r67/three.min.js"></script>
+<!-- <script src="//ajax.googleapis.com/ajax/libs/threejs/r67/three.min.js"></script>
 <script>console.log(THREE)</script>
-<script>
-
+ --><script>
   (function (document, currentScript, ownerDocument) {
 
     var ParentElement = Object.create(HTMLElement.prototype);
@@ -45,10 +44,10 @@
     document.registerElement('parent-element', { prototype: ParentElement });
 
   })(document, document.currentScript, document.currentScript.ownerDocument);
-
 </script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script>console.log(jQuery)</script>
+<!-- <script src="/test/components/parent-element.js"></script>
+ --><!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script>console.log(jQuery)</script> -->
 
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>
 
